--- a/Project Proposal Template.ipynb
+++ b/Project Proposal Template.ipynb
@@ -214,6 +214,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ccb2880b",
+   "metadata": {},
+   "source": [
+    "**Link:** The response is whether or not the player was designated an all-star. The predictors are Rank, Position, Age, Team, Games Played, Games Started, Field Goal %, 3-point field goal %, 2-point field goal %, Free throw %, rebounds per game, Assists per game, Steals per game, Blocks per game, Turnovers per game, Personal fouls per game, and Points per game."  
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8eb561c3",
    "metadata": {},
    "source": [
@@ -221,6 +229,14 @@
     "What is the number of continuous predictors, categorical predictors, and observations in your dataset(s). If you are using multiple datasets, please provide the information for each dataset. When counting predictors, count only those that have sufficient non-missing values, and will be useful.\n",
     "\n",
     "*(1 point)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccb2880b",
+   "metadata": {},
+   "source": [
+    "**Link:** # of continuous predictors: 15 \n # of categorical predictors: 2 \n # of observations: 217"  
    ]
   },
   {
