Update Project Proposal Template.ipynb

--- a/Project Proposal Template.ipynb
+++ b/Project Proposal Template.ipynb
@@ -217,7 +217,7 @@
    "id": "ccb2880b",
    "metadata": {},
    "source": [
-    "**Link:** The response is whether or not the player was designated an all-star. The predictors are Rank, Position, Age, Team, Games Played, Games Started, Field Goal %, 3-point field goal %, 2-point field goal %, Free throw %, rebounds per game, Assists per game, Steals per game, Blocks per game, Turnovers per game, Personal fouls per game, and Points per game."  
+    "The response is whether or not the player was designated an all-star. The predictors are Rank, Position, Age, Team, Games Played, Games Started, Field Goal %, 3-point field goal %, 2-point field goal %, Free throw %, rebounds per game, Assists per game, Steals per game, Blocks per game, Turnovers per game, Personal fouls per game, and Points per game."  
    ]
   },
   {
@@ -236,7 +236,7 @@
    "id": "ccb2880b",
    "metadata": {},
    "source": [
-    "**Link:** # of continuous predictors: 15 \n # of categorical predictors: 2 \n # of observations: 217"  
+    "**Link:** # of continuous predictors: 15, # of categorical predictors: 2, # of observations: 217"  
    ]
   },
   {
