--- a/Project Proposal Template.ipynb
+++ b/Project Proposal Template.ipynb
@@ -236,7 +236,7 @@
    "id": "ccb2880b",
    "metadata": {},
    "source": [
-    "**Link:** # of continuous predictors: 15, # of categorical predictors: 2, # of observations: 217"  
+    "# of continuous predictors: 15, # of categorical predictors: 2, # of observations: 217"  
    ]
   },
   {
