Update Project Proposal Template.ipynb

--- a/Project Proposal Template.ipynb
+++ b/Project Proposal Template.ipynb
@@ -236,7 +236,7 @@
    "id": "ccb2880b",
    "metadata": {},
    "source": [
-    "# of continuous predictors: 15, # of categorical predictors: 2, # of observations: 217"  
+    "Number of continuous predictors: 15, Number of categorical predictors: 2, Number of observations: 217"  
    ]
   },
   {
