--- a/Project Proposal Template.ipynb
+++ b/Project Proposal Template.ipynb
@@ -172,6 +172,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a065f4d6",
+   "metadata": {},
+   "source": [
+    "**Since this is a classification problem, we have decided that we want to optimize accuracy and precision (while still keeping recall above a certain threshold) because we want to have this model be as useful as possible for stakeholders, which means that the model needs to be as accurate as possible and properly report those players that are All-Stars. While the other metrics are still important and need to be considered as well, these are not relevant to the stakeholders.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57701e9e",
    "metadata": {},
    "source": [
@@ -214,10 +222,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb2880b",
+   "id": "bd79fac4",
    "metadata": {},
    "source": [
-    "The response is whether or not the player was designated an all-star. The predictors are Rank, Position, Age, Team, Games Played, Games Started, Field Goal %, 3-point field goal %, 2-point field goal %, Free throw %, rebounds per game, Assists per game, Steals per game, Blocks per game, Turnovers per game, Personal fouls per game, and Points per game."  
+    "The response is whether or not the player was designated an all-star. The predictors are Rank, Position, Age, Team, Games Played, Games Started, Field Goal %, 3-point field goal %, 2-point field goal %, Free throw %, rebounds per game, Assists per game, Steals per game, Blocks per game, Turnovers per game, Personal fouls per game, and Points per game."
    ]
   },
   {
@@ -233,10 +241,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb2880b",
+   "id": "14ee318d",
    "metadata": {},
    "source": [
-    "Number of continuous predictors: 15, Number of categorical predictors: 2, Number of observations: 217"  
+    "Number of continuous predictors: 15, Number of categorical predictors: 2, Number of observations: 217"
    ]
   },
   {
@@ -248,6 +256,14 @@
     "Are there existing solutions of your problem? Almost all Kaggle datasets have exisiting solutions. If yes, then how do you plan to build up on those solutions? **What is the highest model accuracy / performance achieved in the existing solutions?**\n",
     "\n",
     "*(1 point)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "681d4537",
+   "metadata": {},
+   "source": [
+    "**While this dataset is from Kaggle and does have some considerable EDA done already on the Kaggle site, no model has been built from this dataset to classify All-Stars. Therefore there is no model to compare our project to, and we believe that our project will provide fresh insight to an otherwise unanswered problem.**"
    ]
   },
   {
@@ -312,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
