Update 2 Project Proposal
fixed issue

--- a/Project Proposal Template.ipynb
+++ b/Project Proposal Template.ipynb
@@ -222,11 +222,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< Updated upstream
    "id": "bd79fac4",
-=======
-   "id": "0a9308e3",
->>>>>>> Stashed changes
    "metadata": {},
    "source": [
     "The response is whether or not the player was designated an all-star. The predictors are Rank, Position, Age, Team, Games Played, Games Started, Field Goal %, 3-point field goal %, 2-point field goal %, Free throw %, rebounds per game, Assists per game, Steals per game, Blocks per game, Turnovers per game, Personal fouls per game, and Points per game."
@@ -245,18 +241,10 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< Updated upstream
    "id": "14ee318d",
    "metadata": {},
    "source": [
-    "Number of continuous predictors: 15, Number of categorical predictors: 2, Number of observations: 605"
-=======
-   "id": "90c8811a",
-   "metadata": {},
-   "source": [
-    "Number of continuous predictors: 15, Number of categorical predictors: 2, Number of observations: 217"
->>>>>>> Stashed changes
-   ]
+    "Number of continuous predictors: 15, Number of categorical predictors: 2, Number of observations: 605"]
   },
   {
    "cell_type": "markdown",
