--- a/Project Report Template (2).ipynb
+++ b/Project Report Template (2).ipynb
@@ -289,12 +289,12 @@
     "          'bootstrap': [True, False],\n",
     "          'bootstrap_features': [True, False]}\n",
     "\n",
-    "The optimal hyperparameter values from this search were:  'bootstrap': False, 'bootstrap_features': False, 'max_features': 1.0, 'max_samples': 0.7, 'n_estimators': 350. I then tuned the model again with a smaller grid as follows:\n",
+    "The optimal hyperparameter values from this search were: {'bootstrap': False, 'bootstrap_features': False, 'max_features': 0.9, 'max_samples': 0.8, 'n_estimators': 250}. I then tuned the model again with a smaller grid as follows:\n",
     "\n",
     "params = {'base_estimator': [DecisionTreeClassifier(random_state = 1)],\n",
-    "          'n_estimators': [300, 310, 320, 330, 340, 350, 360, 370, 380, 390, 400],\n",
-    "          'max_samples': [0.6, 0.65, 0.7, 0.75, 0.8],\n",
-    "          'max_features': [0.9, 0.95, 1.0],}\n",
+    "          'n_estimators': [200, 210, 220, 230, 240, 250, 260, 270, 280, 290, 300],\n",
+    "          'max_samples': [0.7, 0.75, 0.8, 0.85, 0.9],\n",
+    "          'max_features': [0.8, 0.85, 0.9, 0.95, 1.0],}\n",
     "\n",
     "However, I found that the optimal hyperparameters did not change."
    ]
@@ -494,10 +494,10 @@
     "    <td>Stacking ensembles and voting ensemble</td>\n",
     "  </tr>\n",
     "    <tr>\n",
-    "    <td>Fiona Fe</td>\n",
-    "    <td>Bagged trees & Random forest</td>\n",
-    "    <td>Variable selection</td>    \n",
-    "    <td>Variable selection based on feature importance</td>\n",
+    "    <td>Shray Vaidya</td>\n",
+    "    <td>Bagged trees</td>\n",
+    "    <td>Project report</td>    \n",
+    "    <td>Problem statement, stakeholders, approach, etc</td>\n",
     "  </tr>\n",
     "    <tr>\n",
     "    <td>Ryu Kimiko</td>\n",
